# Janis

./: .env.example  .gitignore  .janis-memory.sqlite3  CLAUDE.md  README.md  SETUP.md  SPEC.md  TODO.md  pyproject.toml  requirements.txt
scripts/: smoke_test.py
src/: __init__.py  errors.py  main.py
src/adapters/: base.py
src/adapters/discord/: __init__.py  client.py  embeds.py  views.py
src/agent/: __init__.py  memory.py  orchestrator.py  prompt_builder.py  prompts.py  tools.py
src/backend/: __init__.py  cli_bridge.py  rest_client.py  vault_index.py
src/bot/: __init__.py  client.py
src/config/: settings.py
src/obsidian/: __init__.py  rest_client.py  vault_index.py
src/tools/: __init__.py  _shared.py  append_note.py  ask_clarification.py  base.py  create_note.py  daily_append.py  daily_read.py  delete_note.py  get_backlinks.py  list_tags.py  list_vault.py  move_note.py  open_note.py  patch_note.py  read_note.py  registry.py  search_dql.py  search_notes.py  set_property.py  update_note.py  upsert_note.py
tests/: conftest.py
tests/integration/: conftest.py  test_bot_integration.py  test_config_integration.py  test_end_to_end.py  test_orchestrator_integration.py  test_rest_client_integration.py  test_vault_index_integration.py
tests/quality_gates/: conftest.py  test_qg_browse_search.py  test_qg_conventions.py  test_qg_daily.py  test_qg_disambiguation.py  test_qg_frontmatter.py  test_qg_meeting.py  test_qg_memory.py
tests/unit/: test_azure_anthropic_provider.py  test_cli_bridge.py  test_memory.py  test_orchestrator.py  test_prompts.py  test_rest_client.py  test_tools.py  test_vault_index.py
(+3 files in other folders)
