[project]
name = "discord-obsidian-agent"
version = "0.1.0"
description = "Discord bot that manages Obsidian vault notes via natural language"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "openai>=2.0",
    "obsidiantools>=0.10",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "qg: live quality gate tests that require Azure OpenAI and Obsidian",
]
